# tatva

./: .gitignore  README.md  pyproject.toml
examples/: benchmark_batch_dogbone.py  benchmark_dogbone_backend.py  dogbone_tension.py
tatva/: __init__.py
tatva/material/: __init__.py  dogbone_tension.py  finite_strain_plane_stress.py
tests/: test_dogbone_tension.py  test_finite_strain_plane_stress.py
