[project]
name = "tatva"
version = "0.8.1"
description = "Lego-like building blocks for differentiable finite element analysis"
authors = [
    { name = "Mohit Pundir", email = "mpundir@ethz.ch" },
    { name = "Flavio Lorez", email = "florez@ethz.ch" },
]
license = "LGPL-3.0"
license-files = [
    "COPYING",
    "COPYING.LESSER",
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "jax>=0.9.0",
    "equinox",
    "numpy",
    "jax-autovmap>=0.3.0",
    "tatva-coloring>=0.0.2"
]

[project.optional-dependencies]
plotting = [
    "matplotlib",
]
gpu = [
    "jax[cuda13]>=0.9.0; platform_system == 'Linux' and (platform_machine == 'x86_64' or platform_machine == 'aarch64')",
]
gpu-local = [
    "jax[cuda13-local]>=0.9.0; platform_system == 'Linux' and (platform_machine == 'x86_64' or platform_machine == 'aarch64')",
]
dev = [
    "pytest>=8.4.2",
]

[tool.uv]
conflicts = [
    [
        { extra = "gpu" },
        { extra = "gpu-local" },
    ],
]

[build-system]
requires = [ "hatchling", ]
build-backend = "hatchling.build"

[project.urls]
repository = "https://github.com/smec-ethz/tatva"
